--- a/Concepts/C02- Statistics/Statistics case study.ipynb
+++ b/Concepts/C02- Statistics/Statistics case study.ipynb
@@ -334,11 +334,11 @@
     {
      "data": {
       "text/plain": [
-       "200    $310.5K\n",
-       "146      $983K\n",
-       "416      $525K\n",
-       "365      $275K\n",
-       "398       $24M\n",
+       "168     $16.3M\n",
+       "71       $7.2M\n",
+       "524      $200K\n",
+       "184    $790.6K\n",
+       "249      $195K\n",
        "Name: Funds Raised, dtype: object"
       ]
      },
@@ -431,52 +431,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>647</th>\n",
-       "      <td>Yext</td>\n",
-       "      <td>yext.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/yext</td>\n",
-       "      <td>$117.8M</td>\n",
-       "      <td>TC50 2009</td>\n",
-       "      <td>Contestant</td>\n",
-       "      <td>Ipo</td>\n",
-       "      <td>117.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>625</th>\n",
-       "      <td>Voxy</td>\n",
-       "      <td>voxy.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/voxy</td>\n",
-       "      <td>$30.8M</td>\n",
-       "      <td>Disrupt SF 2010</td>\n",
-       "      <td>Contestant</td>\n",
-       "      <td>Operating</td>\n",
-       "      <td>30.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>521</th>\n",
-       "      <td>Spinn Inc.</td>\n",
-       "      <td>spinn.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/spinn-...</td>\n",
-       "      <td>$2.6M</td>\n",
+       "      <th>323</th>\n",
+       "      <td>Lumenus</td>\n",
+       "      <td>lumenus.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/lumenus-2</td>\n",
+       "      <td>$250K</td>\n",
        "      <td>Disrupt NY 2016</td>\n",
        "      <td>Contestant</td>\n",
        "      <td>Operating</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567</th>\n",
+       "      <td>The Eye Tribe</td>\n",
+       "      <td>theeyetribe.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/the-ey...</td>\n",
+       "      <td>$5.3M</td>\n",
+       "      <td>Hardware Battlefield 2014</td>\n",
+       "      <td>Contestant</td>\n",
+       "      <td>Acquired</td>\n",
+       "      <td>5.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>658</th>\n",
+       "      <td>Zmorph</td>\n",
+       "      <td>zmorph3d.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/zmorph</td>\n",
+       "      <td>$1M</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Audience choice</td>\n",
+       "      <td>Operating</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Name    Website                                     Crunchbase URL  \\\n",
-       "647        Yext   yext.com       https://www.crunchbase.com/organization/yext   \n",
-       "625        Voxy   voxy.com       https://www.crunchbase.com/organization/voxy   \n",
-       "521  Spinn Inc.  spinn.com  https://www.crunchbase.com/organization/spinn-...   \n",
+       "              Name          Website  \\\n",
+       "323        Lumenus      lumenus.com   \n",
+       "567  The Eye Tribe  theeyetribe.com   \n",
+       "658         Zmorph     zmorph3d.com   \n",
        "\n",
-       "    Funds Raised            Event     Outcome     Status  Funds_in_million  \n",
-       "647      $117.8M        TC50 2009  Contestant        Ipo             117.8  \n",
-       "625       $30.8M  Disrupt SF 2010  Contestant  Operating              30.8  \n",
-       "521        $2.6M  Disrupt NY 2016  Contestant  Operating               2.6  "
+       "                                        Crunchbase URL Funds Raised  \\\n",
+       "323  https://www.crunchbase.com/organization/lumenus-2        $250K   \n",
+       "567  https://www.crunchbase.com/organization/the-ey...        $5.3M   \n",
+       "658     https://www.crunchbase.com/organization/zmorph          $1M   \n",
+       "\n",
+       "                         Event          Outcome     Status  Funds_in_million  \n",
+       "323            Disrupt NY 2016       Contestant  Operating              0.25  \n",
+       "567  Hardware Battlefield 2014       Contestant   Acquired              5.30  \n",
+       "658                          -  Audience choice  Operating              1.00  "
       ]
      },
      "execution_count": 8,
@@ -2127,21 +2132,21 @@
       "text/plain": [
        "Disrupt NY 2015         21\n",
        "Disrupt SF 2011         19\n",
-       "Disrupt SF 2013         19\n",
-       "Disrupt SF 2015         19\n",
-       "Disrupt SF 2014         19\n",
-       "Disrupt NYC 2013        19\n",
        "Disrupt NYC 2012        19\n",
+       "Disrupt SF 2015         19\n",
+       "Disrupt NYC 2013        19\n",
+       "Disrupt SF 2014         19\n",
+       "Disrupt SF 2013         19\n",
        "Disrupt SF 2016         17\n",
        "Disrupt NY 2016         16\n",
        "Disrupt SF 2012         15\n",
-       "Disrupt NYC 2011        15\n",
        "Disrupt NYC 2014        15\n",
+       "Disrupt NYC 2011        15\n",
        "Disrupt SF 2010         13\n",
        "Disrupt London 2015     11\n",
        "Disrupt NYC 2010        10\n",
-       "Disrupt EU 2014         10\n",
        "Disrupt London 2016     10\n",
+       "Disrupt EU 2014         10\n",
        "Disrupt EU 2013          9\n",
        "Disrupt Beijing 2011     4\n",
        "Name: Event, dtype: int64"
@@ -2493,26 +2498,26 @@
        "TC50 2008                    25\n",
        "TC40 2007                    22\n",
        "Disrupt NY 2015              21\n",
-       "Disrupt SF 2015              19\n",
-       "Disrupt SF 2014              19\n",
+       "Disrupt SF 2013              19\n",
        "Disrupt NYC 2012             19\n",
-       "TC50 2009                    19\n",
+       "Disrupt SF 2014              19\n",
        "Disrupt NYC 2013             19\n",
        "Disrupt SF 2011              19\n",
-       "Disrupt SF 2013              19\n",
+       "Disrupt SF 2015              19\n",
+       "TC50 2009                    19\n",
        "Disrupt SF 2016              17\n",
        "Disrupt NY 2016              16\n",
-       "Disrupt SF 2012              15\n",
        "Disrupt NYC 2014             15\n",
        "Disrupt NYC 2011             15\n",
+       "Disrupt SF 2012              15\n",
        "Disrupt SF 2010              13\n",
-       "Hardware Battlefield 2016    12\n",
        "Hardware Battlefield 2014    12\n",
+       "Hardware Battlefield 2016    12\n",
        "Disrupt London 2015          11\n",
-       "Disrupt NYC 2010             10\n",
-       "Disrupt EU 2014              10\n",
        "Disrupt London 2016          10\n",
        "Hardware Battlefield 2015    10\n",
+       "Disrupt NYC 2010             10\n",
+       "Disrupt EU 2014              10\n",
        "Disrupt EU 2013               9\n",
        "-                             6\n",
        "Disrupt Beijing 2011          4\n",
@@ -2555,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2663,7 +2668,7 @@
        "[276 rows x 2 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2678,7 +2683,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2700,7 +2707,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Funds_in_million</th>\n",
+       "      <th>funds_normalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>-0.634557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>-0.551878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>1.950854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>-0.641261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>0.230226</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City  Funds_in_million  funds_normalized\n",
+       "1    NY              0.63         -0.634557\n",
+       "3    NY              1.00         -0.551878\n",
+       "18   NY             12.20          1.950854\n",
+       "34   NY              0.60         -0.641261\n",
+       "37   NY              4.50          0.230226"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cities['funds_normalized'] = (df_cities['Funds_in_million'] - df_cities['Funds_in_million'].mean())/df_cities['Funds_in_million'].std(ddof = 0)\n",
+    "df_cities.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cities.to_csv('cities_normal.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -2748,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
