--- a/Concepts/C02- Statistics/Statistics case study.ipynb
+++ b/Concepts/C02- Statistics/Statistics case study.ipynb
@@ -334,11 +334,11 @@
     {
      "data": {
       "text/plain": [
-       "168     $16.3M\n",
-       "71       $7.2M\n",
-       "524      $200K\n",
-       "184    $790.6K\n",
-       "249      $195K\n",
+       "395     $3.8M\n",
+       "164      $10M\n",
+       "198       $5K\n",
+       "387     $5.3M\n",
+       "62     $20.8M\n",
        "Name: Funds Raised, dtype: object"
       ]
      },
@@ -431,57 +431,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>Lumenus</td>\n",
-       "      <td>lumenus.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/lumenus-2</td>\n",
-       "      <td>$250K</td>\n",
-       "      <td>Disrupt NY 2016</td>\n",
-       "      <td>Contestant</td>\n",
+       "      <th>351</th>\n",
+       "      <td>Mobalytics</td>\n",
+       "      <td>mobalyticshq.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/mobaly...</td>\n",
+       "      <td>$2.6M</td>\n",
+       "      <td>Disrupt SF 2016</td>\n",
+       "      <td>Winner</td>\n",
        "      <td>Operating</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>2.600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>567</th>\n",
-       "      <td>The Eye Tribe</td>\n",
-       "      <td>theeyetribe.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/the-ey...</td>\n",
-       "      <td>$5.3M</td>\n",
-       "      <td>Hardware Battlefield 2014</td>\n",
+       "      <th>522</th>\n",
+       "      <td>SpokenLayer</td>\n",
+       "      <td>spokenlayer.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/spoken...</td>\n",
+       "      <td>$482K</td>\n",
+       "      <td>Disrupt NYC 2012</td>\n",
        "      <td>Contestant</td>\n",
-       "      <td>Acquired</td>\n",
-       "      <td>5.30</td>\n",
+       "      <td>Operating</td>\n",
+       "      <td>0.482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>658</th>\n",
-       "      <td>Zmorph</td>\n",
-       "      <td>zmorph3d.com</td>\n",
-       "      <td>https://www.crunchbase.com/organization/zmorph</td>\n",
-       "      <td>$1M</td>\n",
-       "      <td>-</td>\n",
-       "      <td>Audience choice</td>\n",
+       "      <th>563</th>\n",
+       "      <td>Tango Tech</td>\n",
+       "      <td>tangopc.com</td>\n",
+       "      <td>https://www.crunchbase.com/organization/tango-...</td>\n",
+       "      <td>$350K</td>\n",
+       "      <td>Disrupt NYC 2014</td>\n",
+       "      <td>Contestant</td>\n",
        "      <td>Operating</td>\n",
-       "      <td>1.00</td>\n",
+       "      <td>0.350</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Name          Website  \\\n",
-       "323        Lumenus      lumenus.com   \n",
-       "567  The Eye Tribe  theeyetribe.com   \n",
-       "658         Zmorph     zmorph3d.com   \n",
+       "            Name           Website  \\\n",
+       "351   Mobalytics  mobalyticshq.com   \n",
+       "522  SpokenLayer   spokenlayer.com   \n",
+       "563   Tango Tech       tangopc.com   \n",
        "\n",
        "                                        Crunchbase URL Funds Raised  \\\n",
-       "323  https://www.crunchbase.com/organization/lumenus-2        $250K   \n",
-       "567  https://www.crunchbase.com/organization/the-ey...        $5.3M   \n",
-       "658     https://www.crunchbase.com/organization/zmorph          $1M   \n",
+       "351  https://www.crunchbase.com/organization/mobaly...        $2.6M   \n",
+       "522  https://www.crunchbase.com/organization/spoken...        $482K   \n",
+       "563  https://www.crunchbase.com/organization/tango-...        $350K   \n",
        "\n",
-       "                         Event          Outcome     Status  Funds_in_million  \n",
-       "323            Disrupt NY 2016       Contestant  Operating              0.25  \n",
-       "567  Hardware Battlefield 2014       Contestant   Acquired              5.30  \n",
-       "658                          -  Audience choice  Operating              1.00  "
+       "                Event     Outcome     Status  Funds_in_million  \n",
+       "351   Disrupt SF 2016      Winner  Operating             2.600  \n",
+       "522  Disrupt NYC 2012  Contestant  Operating             0.482  \n",
+       "563  Disrupt NYC 2014  Contestant  Operating             0.350  "
       ]
      },
      "execution_count": 8,
@@ -504,7 +504,8 @@
     "- We have brought the data to a usable form for analysis\n",
     "\n",
     "\n",
-    "### Task 1"
+    "### Task 1:\n",
+    "Check if the average funds raised by the companies still operating and the companies that got closed is significantly different."
    ]
   },
   {
@@ -582,7 +583,8 @@
     "colab": {},
     "colab_type": "code",
     "id": "EZgDxwPYtFVT",
-    "outputId": "11fca71d-4791-4830-eab9-f8757d1fe1b3"
+    "outputId": "11fca71d-4791-4830-eab9-f8757d1fe1b3",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1813,7 +1815,8 @@
     "id": "XEJFuoEitFVo"
    },
    "source": [
-    "### Task 2"
+    "### Task 2\n",
+    "Check if the proportion of companies still operating is different among the companies which came out only as contestants vs companies that either came out as Finalists, Audience choices, Winners or a Runner-ups"
    ]
   },
   {
@@ -2114,7 +2117,10 @@
     "id": "-aToY38BtFV2"
    },
    "source": [
-    "We have the information about the event location where each company has participated and in which year so what we want to do is, see if there is a significant difference among the funds raised by the companies from New York, San Fransisco and Europe (EU and London combined)"
+    "### Task 3:\n",
+    "We have the information about the event location where each company has participated and in which year so what we want to do is, see if there is a significant difference among the funds raised by the companies from New York, San Fransisco and Europe (EU and London combined)\n",
+    "\n",
+    "### Approach 1: ANOVA using <code>scipy.stats</code>"
    ]
   },
   {
@@ -2131,21 +2137,21 @@
      "data": {
       "text/plain": [
        "Disrupt NY 2015         21\n",
-       "Disrupt SF 2011         19\n",
        "Disrupt NYC 2012        19\n",
-       "Disrupt SF 2015         19\n",
-       "Disrupt NYC 2013        19\n",
        "Disrupt SF 2014         19\n",
        "Disrupt SF 2013         19\n",
+       "Disrupt NYC 2013        19\n",
+       "Disrupt SF 2015         19\n",
+       "Disrupt SF 2011         19\n",
        "Disrupt SF 2016         17\n",
        "Disrupt NY 2016         16\n",
-       "Disrupt SF 2012         15\n",
        "Disrupt NYC 2014        15\n",
        "Disrupt NYC 2011        15\n",
+       "Disrupt SF 2012         15\n",
        "Disrupt SF 2010         13\n",
        "Disrupt London 2015     11\n",
-       "Disrupt NYC 2010        10\n",
        "Disrupt London 2016     10\n",
+       "Disrupt NYC 2010        10\n",
        "Disrupt EU 2014         10\n",
        "Disrupt EU 2013          9\n",
        "Disrupt Beijing 2011     4\n",
@@ -2354,6 +2360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Approach 2: ANOVA using <code>statsmodels</code>\n",
     "#### The Same calculation as above can also be done with the statsmodels library, which has the capability to build the ANOVA table."
    ]
   },
@@ -2498,26 +2505,26 @@
        "TC50 2008                    25\n",
        "TC40 2007                    22\n",
        "Disrupt NY 2015              21\n",
+       "Disrupt SF 2014              19\n",
        "Disrupt SF 2013              19\n",
        "Disrupt NYC 2012             19\n",
-       "Disrupt SF 2014              19\n",
-       "Disrupt NYC 2013             19\n",
-       "Disrupt SF 2011              19\n",
        "Disrupt SF 2015              19\n",
        "TC50 2009                    19\n",
+       "Disrupt NYC 2013             19\n",
+       "Disrupt SF 2011              19\n",
        "Disrupt SF 2016              17\n",
        "Disrupt NY 2016              16\n",
-       "Disrupt NYC 2014             15\n",
        "Disrupt NYC 2011             15\n",
+       "Disrupt NYC 2014             15\n",
        "Disrupt SF 2012              15\n",
        "Disrupt SF 2010              13\n",
        "Hardware Battlefield 2014    12\n",
        "Hardware Battlefield 2016    12\n",
        "Disrupt London 2015          11\n",
-       "Disrupt London 2016          10\n",
-       "Hardware Battlefield 2015    10\n",
-       "Disrupt NYC 2010             10\n",
        "Disrupt EU 2014              10\n",
+       "Disrupt London 2016          10\n",
+       "Disrupt NYC 2010             10\n",
+       "Hardware Battlefield 2015    10\n",
        "Disrupt EU 2013               9\n",
        "-                             6\n",
        "Disrupt Beijing 2011          4\n",
@@ -2708,7 +2715,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2792,16 +2801,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cities.to_csv('cities_normal.csv')"
+    "# df_cities.to_csv('cities_normal.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -2849,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2881,6 +2890,121 @@
     "So the decision is: We fail to reject the null hypothesis at 5% level of significance.\n",
     "\n",
     "### So there is no  sufficient evidence  to reject the null hypothesis that at least one location is different from others in terms of funds raised."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approach 3: Chi-squared test of proportions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "EU     40\n",
+       "NY    115\n",
+       "SF    121\n",
+       "Name: funds_normalized, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cities.groupby('City')['funds_normalized'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "EU    2\n",
+       "NY    8\n",
+       "SF    7\n",
+       "Name: funds_normalized, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cities_high = df_cities[df_cities['funds_normalized']>=2]\n",
+    "df_cities_high.groupby('City')['funds_normalized'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_table = [[40, 115, 121],\n",
+    "              [2, 8, 7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[40, 115, 121], [2, 8, 7]]\n",
+      "dof=2\n",
+      "[[ 39.56313993 115.86348123 120.57337884]\n",
+      " [  2.43686007   7.13651877   7.42662116]]\n",
+      "probability=0.950, critical=5.991, stat=0.220\n",
+      "Independent (fail to reject H0)\n",
+      "significance=0.050, p=0.896\n",
+      "Independent (fail to reject H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chi-squared test with similar proportions\n",
+    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import chi2\n",
+    "# contingency table\n",
+    "table = city_table\n",
+    "print(table)\n",
+    "stat, p, dof, expected = chi2_contingency(table)\n",
+    "print('dof=%d' % dof)\n",
+    "print(expected)\n",
+    "# interpret test-statistic\n",
+    "prob = 0.95\n",
+    "critical = chi2.ppf(prob, dof)\n",
+    "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
+    "if abs(stat) >= critical:\n",
+    "\tprint('Dependent (reject H0)')\n",
+    "else:\n",
+    "\tprint('Independent (fail to reject H0)')\n",
+    "# interpret p-value\n",
+    "alpha = 1.0 - prob\n",
+    "print('significance=%.3f, p=%.3f' % (alpha, p))\n",
+    "if p <= alpha:\n",
+    "\tprint('Dependent (reject H0)')\n",
+    "else:\n",
+    "\tprint('Independent (fail to reject H0)')"
    ]
   }
  ],
