--- a/Concepts/M13 - DL/ANN - Introduction.ipynb
+++ b/Concepts/M13 - DL/ANN - Introduction.ipynb
@@ -84,7 +84,8 @@
     "    \n",
     "# Suppress exponential notation, define an appropriate float formatter\n",
     "# Specify stdout line width and let pretty print do the work\n",
-    "np.set_printoptions(suppress=True, formatter={'float_kind':'{:16.4f}'.format}, linewidth=120)"
+    "# np.set_printoptions(suppress=True, formatter={'float_kind':'{:16.6f}'.format}, linewidth=50)\n",
+    "np.set_printoptions(suppress=True, precision=6)"
    ]
   },
   {
@@ -245,10 +246,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector = [2, 3, 4]\n",
+    "lst = [0 for x in range(len(vector))]\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Input - Multiple Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.195, 0.13, 0.52]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ele_mult(number, vector):\n",
+    "    output = [0 for x in range(len(vector))]\n",
+    "    for i in range(len(vector)):\n",
+    "        output[i] += number*vector[i]\n",
+    "        \n",
+    "    return output\n",
+    "\n",
+    "def neural_network(predictor, weights):\n",
+    "    prediction = ele_mult(predictor, weights)\n",
+    "    \n",
+    "    return prediction\n",
+    "\n",
+    "predictor = 0.65\n",
+    "weights = [0.3, 0.2, 0.8]\n",
+    "\n",
+    "neural_network(predictor, weights) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.195, 0.13 , 0.52 ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def neural_network(predictor, weights):\n",
+    "    prediction = np.dot(predictor, weights)\n",
+    "    \n",
+    "    return prediction\n",
+    "\n",
+    "predictor = 0.65\n",
+    "weights = [0.3, 0.2, 0.8]\n",
+    "\n",
+    "neural_network(predictor, weights) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple Input and Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.555, 0.9800000000000001, 0.9650000000000001]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "def vector_mat_mult(vector, matrix):\n",
+    "    output = [0 for x in range(len(matrix))]\n",
+    "    for i in range(len(matrix)):\n",
+    "        output[i] += w_sum(matrix[i], vector)\n",
+    "        \n",
+    "    return output\n",
+    "\n",
+    "def neural_network(predictor, weights):\n",
+    "    prediction = vector_mat_mult(predictor, weights)\n",
+    "    \n",
+    "    return prediction\n",
+    "\n",
+    "toes =  [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65,0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "predictor = [toes[0],wlrec[0],nfans[0]]\n",
+    "weights = np.array([[0.1, 0.1, -0.3], [0.1, 0.2, 0.0], [0.0, 1.3, 0.1]])\n",
+    "\n",
+    "prediction = neural_network(predictor, weights)\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.555, 0.9800000000000001, 0.9650000000000001, 1.0350000000000001]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictor = [toes[0],wlrec[0],nfans[0]]\n",
+    "weights = np.array([[0.1, 0.1, -0.3], [0.1, 0.2, 0.0], [0.0, 1.3, 0.1], [0.1, 0.1, 0.1]]) # Different weight dimension \n",
+    "\n",
+    "prediction = neural_network(predictor, weights)\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple Input and Output - with 1 Hidden layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.21350000000000002, 0.14500000000000002, 0.5065]\n"
+     ]
+    }
+   ],
+   "source": [
+    "            #toes %win #fans\n",
+    "ih_wgt = [ [0.1, 0.2, -0.1], #hid[0]\n",
+    "           [-0.1,0.1, 0.9], #hid[1]\n",
+    "           [0.1, 0.4, 0.1] ] #hid[2]\n",
+    "\n",
+    "           #hid[0] hid[1] hid[2]\n",
+    "hp_wgt = [ [0.3, 1.1, -0.3], #hurt?\n",
+    "           [0.1, 0.2, 0.0], #win?\n",
+    "           [0.0, 1.3, 0.1] ] #sad?\n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "def vector_mat_mult(vector, matrix):\n",
+    "    output = [0 for x in range(len(matrix))]\n",
+    "    for i in range(len(matrix)):\n",
+    "        output[i] += w_sum(matrix[i], vector)\n",
+    "        \n",
+    "    return output\n",
+    "\n",
+    "def neural_network(predictor, weights):\n",
+    "    hidden = vector_mat_mult(predictor, weights[0])\n",
+    "    output = vector_mat_mult(hidden, weights[1])\n",
+    "    return output\n",
+    "\n",
+    "toes =  [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65,0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "# Input corresponds to every entry\n",
+    "# for the first game of the season.\n",
+    "\n",
+    "predictor = [toes[0],wlrec[0],nfans[0]]\n",
+    "pred = neural_network(predictor,weights)\n",
+    "\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.31050000000000005, 0.24200000000000005]\n"
+     ]
+    }
+   ],
+   "source": [
+    "            #toes %win #fans\n",
+    "ih_wgt = [ [0.1, 0.2, -0.1], #hid[0]\n",
+    "           [-0.1,0.1, 0.9], #hid[1]\n",
+    "           [0.1, 0.4, 0.1],\n",
+    "           [0.1, 0.0, 0.1]] #hid[2]\n",
+    "\n",
+    "           #hid[0] hid[1] hid[2]\n",
+    "hp_wgt = [ [0.3, 1.1, -0.3, 0.1], #hurt?\n",
+    "           [0.1, 0.2, 0.0, 0.1]] #win?\n",
+    "           \n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "def vector_mat_mult(vector, matrix):\n",
+    "    output = [0 for x in range(len(matrix))]\n",
+    "    for i in range(len(matrix)):\n",
+    "        output[i] += w_sum(matrix[i], vector)\n",
+    "        \n",
+    "    return output\n",
+    "\n",
+    "def neural_network(predictor, weights):\n",
+    "    hidden = vector_mat_mult(predictor, weights[0])\n",
+    "    output = vector_mat_mult(hidden, weights[1])\n",
+    "    return output\n",
+    "\n",
+    "toes =  [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65,0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "# Input corresponds to every entry\n",
+    "# for the first game of the season.\n",
+    "\n",
+    "predictor = [toes[0],wlrec[0],nfans[0]]\n",
+    "pred = neural_network(predictor,weights)\n",
+    "\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Network with 1 hidden layer - Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2135 0.145  0.5065]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#toes %win #fans\n",
+    "ih_wgt = np.array([ \n",
+    "            [0.1, 0.2, -0.1], #hid[0]\n",
+    "            [-0.1,0.1, 0.9], #hid[1]\n",
+    "            [0.1, 0.4, 0.1]]).T #hid[2]\n",
+    "\n",
+    "\n",
+    "# hid[0] hid[1] hid[2]\n",
+    "hp_wgt = np.array([  \n",
+    "            [0.3, 1.1, -0.3], #hurt?\n",
+    "            [0.1, 0.2, 0.0], #win?\n",
+    "            [0.0, 1.3, 0.1] ]).T #sad?\n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "\n",
+    "    hid = input.dot(weights[0])\n",
+    "    pred = hid.dot(weights[1])\n",
+    "    return pred\n",
+    "\n",
+    "\n",
+    "toes =  np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65,0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0],wlrec[0],nfans[0]])\n",
+    "\n",
+    "pred = neural_network(input,weights)\n",
+    "print(pred)"
+   ]
   }
  ],
  "metadata": {
