--- a/Concepts/M13 - DL/ANN - Introduction.ipynb
+++ b/Concepts/M13 - DL/ANN - Introduction.ipynb
@@ -594,6 +594,39 @@
     "pred = neural_network(input,weights)\n",
     "print(pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.010000000000000007"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight = 0.5\n",
+    "predictor = 0.8\n",
+    "\n",
+    "output = weight*predictor\n",
+    "observation = 0.3\n",
+    "error = (observation - output)**2\n",
+    "error"
+   ]
   }
  ],
  "metadata": {
