--- a/Concepts/M13 - DL/ANN.ipynb
+++ b/Concepts/M13 - DL/ANN.ipynb
@@ -84,7 +84,7 @@
     "    \n",
     "# Suppress exponential notation, define an appropriate float formatter\n",
     "# Specify stdout line width and let pretty print do the work\n",
-    "np.set_printoptions(suppress=True, formatter={'float_kind':'{:.6f}'.format}, linewidth=100)\n",
+    "np.set_printoptions(suppress=True, formatter={'float_kind':'{:.6f}'.format}, linewidth=120)\n",
     "np.set_printoptions(precision=6)"
    ]
   },
@@ -1542,6 +1542,114 @@
     "for ax in axes.flat:\n",
     "    ax.label_outer()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generalizing Gradient Descent\n",
+    "#### GD with multiple inputs $\\rightarrow$ 1 output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "            #toes %win #fans\n",
+    "weights = [ [0.1, 0.1, -0.3],#hurt?\n",
+    "            [0.1, 0.2, 0.0], #win?\n",
+    "            [0.0, 1.3, 0.1] ]#sad?\n",
+    "\n",
+    "def w_sum(a,b):\n",
+    "    assert(len(a) == len(b))\n",
+    "    output = 0\n",
+    "\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "def vect_mat_mul(vect,matrix):\n",
+    "    assert(len(vect) == len(matrix))\n",
+    "    output = [0,0,0]\n",
+    "    for i in range(len(vect)):\n",
+    "        output[i] = w_sum(vect,matrix[i])\n",
+    "    return output\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    pred = vect_mat_mul(input,weights)\n",
+    "    return pred\n",
+    "\n",
+    "toes  = [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65,0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "hurt  = [0.1, 0.0, 0.0, 0.1]\n",
+    "win   = [  1,   1,   0,   1]\n",
+    "sad   = [0.1, 0.0, 0.1, 0.2]\n",
+    "\n",
+    "alpha = 0.01\n",
+    "\n",
+    "input = [toes[0],wlrec[0],nfans[0]]\n",
+    "true  = [hurt[0], win[0], sad[0]]\n",
+    "\n",
+    "pred = neural_network(input,weights)\n",
+    "\n",
+    "error = [0, 0, 0] \n",
+    "delta = [0, 0, 0]\n",
+    "\n",
+    "for i in range(len(true)):\n",
+    "    error[i] = (pred[i] - true[i]) ** 2\n",
+    "    delta[i] = pred[i] - true[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def outer_prod(a, b):\n",
+    "    \n",
+    "    # just a matrix of zeros\n",
+    "    out = np.zeros((len(a), len(b)))\n",
+    "\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(b)):\n",
+    "            out[i][j] = a[i] * b[j]\n",
+    "    return out\n",
+    "\n",
+    "weight_deltas = outer_prod(delta,input)\n",
+    "\n",
+    "for i in range(len(weights)):\n",
+    "    for j in range(len(weights[0])):\n",
+    "        weights[i][j] -= alpha * weight_deltas[i][j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.061325, 0.0970425, -0.30546],\n",
+       " [0.1017, 0.20013, 0.00023999999999999887],\n",
+       " [-0.07352500000000001, 1.2943775, 0.08962]]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
    ]
   }
  ],
