--- a/Concepts/M13 - DL/ANN - Fundamental Operations.ipynb
+++ b/Concepts/M13 - DL/ANN - Fundamental Operations.ipynb
@@ -1159,7 +1159,7 @@
     "def matrix_function_forward_sum(X: ndarray,\n",
     "                                W: ndarray,\n",
     "                                sigma: Array_Function,\n",
-    "                                modify_x11: bool = False,\n",
+    "                                modify_x11: bool = False, # Including conditions in function def.\n",
     "                                x11: float = 0.5) -> float:\n",
     "    '''\n",
     "    Computing the result of the forward pass of this function with\n",
