--- a/Concepts/M13 - DL/13.2 ANN - Generalized Gradient Descent.ipynb
+++ b/Concepts/M13 - DL/13.2 ANN - Generalized Gradient Descent.ipynb
@@ -567,15 +567,17 @@
     "df = pd.DataFrame(list(zip(train_err_lst, train_acc_lst, test_err_lst, test_acc_lst)), \n",
     "                  columns=['train_error', 'train_acc', 'test_error', 'test_acc'])\n",
     "\n",
+    "import matplotlib.ticker as mticker\n",
+    "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize = (15, 6))\n",
     "df[['train_error', 'test_error']].plot(ax = axes[0], title = 'Train vs Test Error')\n",
     "df[['train_acc', 'test_acc']].plot(ax = axes[1], title = 'Train vs Test Accruacy')\n",
     "axes[0].set_xlabel(\"Iteration\")\n",
     "axes[0].set_ylabel(\"Error\")\n",
-    "axes[0].set_xticklabels(df.index*5)\n",
+    "axes[0].xaxis.set_major_locator(mticker.MultipleLocator(5))\n",
     "axes[1].set_xlabel(\"Iteration\")\n",
     "axes[1].set_ylabel(\"Accuracy\")\n",
-    "axes[1].set_xticklabels(df.index*5)\n",
+    "axes[1].xaxis.set_major_locator(mticker.MultipleLocator(5))\n",
     "plt.show()"
    ]
   },
