--- a/Concepts/M13 - DL/D1.1 ANN - Mathematical Foundations.ipynb
+++ b/Concepts/M13 - DL/D1.1 ANN - Mathematical Foundations.ipynb
@@ -14,8 +14,7 @@
     "import pandas as pd\n",
     "import datetime\n",
     "import random\n",
-    "from typing import Callable\n",
-    "from typing import Dict\n",
+    "from typing import Callable, Dict, Tuple, List\n",
     "\n",
     "# ML\n",
     "# from sklearn import datasets\n",
